# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rendezvous_swap"
version = "0.1.0"
#authors
edition = "2021"
#rust-version
description = "Swap data and sync execution between a pair of threads efficiently"
#documentation
readme = "README.md"
#homepage
repository = "https://github.com/ErikBot42/rendezvous_swap"
license = "GPL-3.0"
#license-file = "LICENSE.md"
keywords = [""] # max 5, max 20 char
categories = [""] # max 5, in set https://crates.io/category_slugs
publish = false

[dev-dependencies]
criterion = {version = "0.3", default-features = false}

[[bench]]
name = "benchmark"
harness = false

[dependencies]
