[package]
name = "rendezvous_swap"
version = "0.1.0"
edition = "2021"
description = "Swap data and sync execution between a pair of threads efficiently"
readme = "README.md"
repository = "https://github.com/ErikBot42/rendezvous_swap"
license = "GPL-3.0"
keywords = [
    "synchronization",
    "atomic",
    "thread",
    "memory",
    "cross-platform",
] 
categories = [
    "concurrency",
    "no-std",
    "memory-management",
    "data-structures",
    "embedded",
] 

[dev-dependencies]
criterion = {version = "0.3", default-features = false}

[[bench]]
name = "benchmark"
harness = false

[dependencies]
cache-padded = "1.2.0"
